# execnb

./: CHANGELOG.md  README.md  index.html  index.html.md  nbio.html  nbio.html.md  pyproject.toml  robots.txt  search.json  settings.ini  shell.html  shell.html.md  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
execnb/: _modidx.py  nbio.py  shell.py
nbs/: 00_shell.ipynb  01_nbio.ipynb  02_shell.ipynb  index.ipynb  nbdev.yml
site_libs/bootstrap/: bootstrap-328d7b5b8104fe527fa86b509f7955ca.min.css
tests/: clean.ipynb  error.ipynb  params.ipynb  ran.ipynb
